# ai-hina

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  HINA_AI_MASTER_PLAN_VI.md  LICENSE  README.md  SECURITY.md  deep-research-report.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.codex/: config.toml
.codex/agents/: architecture-contracts.toml  integration-release.toml  module-builder.toml  oss-researcher.toml  qa-designer.toml  qa-runner.toml  safety-reviewer.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
adapters/: README.md
apps/: README.md
apps/core-runtime/: README.md
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/dev-console/: README.md  package.json
assets/manifests/: README.md  hina-code-avatar.v1.json  hina-kawaii-vrm-presentation.v1.json  vieneu-truc-ly-preset.v1.json  vrm1-constraint-twist-sample.v1.json
configs/base/: security.toml
docs/adr/: 0001-modular-monolith-process-adapters.md  0002-codex-multi-agent-delivery.md  0003-project-license.md  (+4 more)
infra/: README.md
ml/: README.md
tests/: README.md  __init__.py
tools/: README.md
workers/: README.md
workers/speech/: README.md  pyproject.toml
workers/speech/src/hina_speech/: __init__.py  audio.py  capture.py  config.py  errors.py  model.py  provider.py  service.py  tts_audio.py  tts_config.py  tts_provider.py  tts_service.py  tts_text.py  vad.py
workers/speech/tests/: test_audio_vad.py  test_provider_service.py  test_tts.py
(+140 files in other folders)
