[project]
name = "hina-ai"
version = "0.0.0"
description = "Local-first Vietnamese AI VTuber"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
authors = [
  { name = "Linh Vu" },
]
dependencies = [
  "faster-whisper==1.2.1",
  "qdrant-client==1.18.0",
  "vieneu==3.2.3",
]

[dependency-groups]
dev = [
  "jsonschema>=4.25,<5",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = []
