[project]
name = "hina-speech"
version = "0.1.0"
description = "Local-first audio capture, VAD and Vietnamese STT worker for Hina AI"
requires-python = ">=3.12,<3.15"
license = "MIT"
dependencies = [
  "faster-whisper==1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hina_speech"]
